--- a/index.html
+++ b/index.html
@@ -325,9 +325,11 @@ An overview of my activities is available here:
 </div>
 <div id="references" class="section level3">
 <h3>References</h3>
-<p>Caers, J. (2005). <a
-href="https://store.spe.org/Petroleum-Geostatistics-P45.aspx"><em>Petroleum
-geostatistics</em></a>. Society of Petroleum Engineers Richardson</p>
+<p>Hassani, A., Azapagic, A., &amp; Shokri, N. (2020). <a
+href="https://doi.org/10.1073/pnas.2013771117">Predicting long-term
+dynamics of soil salinity and sodicity on a global scale</a>.
+<em>Proceedings of the National Academy of Sciences, 117</em>(52),
+33017-33027.</p>
 </div>
 
 
